Footer fix and links to source code added

--- a/content/projects/ai-story-game/index.mdx
+++ b/content/projects/ai-story-game/index.mdx
@@ -7,7 +7,7 @@ progress: 25
 tags: ["Game Development", "Artificial Intelligence", "Interactive Fiction", "NLP", "Storytelling"]
 techStack: ["Python", "OpenAI GPT", "React", "Node.js", "WebSocket", "MongoDB"]
 # demoUrl: ""
-repoUrl: "https://github.com/paramraj/ai-story-game"
+# repoUrl: ""
 publishedAt: "2025-10-02"
 author: "Mahadev Mohan and Paramraj Singh Machre"
 challenges: [
