--- a/content/projects/discord-ai-notetaker/index.mdx
+++ b/content/projects/discord-ai-notetaker/index.mdx
@@ -7,7 +7,7 @@ progress: 35
 tags: ["Discord Bot", "AI Assistant", "Voice Transcription", "Meeting Notes", "Productivity"]
 techStack: ["Python", "Discord.py", "OpenAI Whisper", "GPT-4", "PostgreSQL", "WebSocket"]
 # demoUrl: ""
-repoUrl: "https://github.com/paramraj/discord-ai-notetaker"
+# repoUrl: ""
 publishedAt: "2025-10-02"
 author: "Mahadev Mohan and Paramraj Singh Machre"
 challenges: [
