--- a/content/projects/ai-news-outlet/index.mdx
+++ b/content/projects/ai-news-outlet/index.mdx
@@ -7,7 +7,7 @@ progress: 30
 tags: ["Artificial Intelligence", "News Media", "Speech Synthesis", "Video Generation", "Automation"]
 techStack: ["Python", "OpenAI GPT", "ElevenLabs", "D-ID", "FastAPI", "React"]
 # demoUrl: ""
-repoUrl: "https://github.com/paramraj/ai-news-outlet"
+# repoUrl: ""
 publishedAt: "2025-10-02"
 author: "Mahadev Mohan and Paramraj Singh Machre"
 challenges: [
